--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -70,48 +70,7 @@ div p {
 }
 
 
-.cell1{
-	display: flex;
-	flex: 1;
-	align-content:flex-start;
-	align-items:center;
-  
-	border: 1px solid blue;
-  
-	
-	flex-wrap: wrap;
-	flex-direction: column;
-}
 
-.cell2{
-	display: block;
-	flex-basis:auto;
-	flex-grow:1;
-	
-	align-content:center;
-	align-items:center;
-  
-	border: 1px solid blue;
-  
-	
-	flex-wrap: wrap;
-	flex-direction: column-reverse;
-}
-
-.cell3{
-	display: flex;
-	flex-basis:auto;
-	flex-grow:1;
-	flex: 1;
-	align-content:flex-start;
-	align-items:center;
-  
-	border: 1px solid blue;
-  
-	
-	flex-wrap: wrap;
-	flex-direction: column;
-}
 
 
 
@@ -438,7 +397,7 @@ max-width: 620px;
 	
   #cell2 {
     flex-direction: column-reverse;
-    position: relative;
+    position: static;
    
 	  
   }
@@ -479,7 +438,7 @@ max-width: 620px;
   #cell2 {
     flex-direction: column-reverse;
     
-    position: relative;
+    position: absolute;
    
    
   }
