--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -374,7 +374,7 @@ div p {
 
 
 .tapered-rule{
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 5px;
   border: none;
@@ -385,46 +385,6 @@ div p {
 
 .cell2 {
 	flex-grow:1;
-	
-}
-
-.rightside{
-	max-width: 620px;
-  min-width: 500px;
-  text-align: left;
-  
-	
-  border: 1px solid green;
-  
-	flex-wrap: wrap;	
-	flex-direction: column-reverse;
-  flex: 1;
-	flex-grow: 1;
-  vertical-align: top;
-  
-  
-	
-  padding: 0px 0px 20px 0px;
-	
-}
-
-.bottom-right{
-max-width: 620px;
-  min-width: 500px;
-  text-align: left;
-  
-	
-  border: 1px solid green;
-  
-	flex-wrap: wrap;	
-	
-  flex: 1;
-	flex-grow: 1;
-  vertical-align: top;
-  
-  
-	
-  padding: 0px 0px 20px 0px;
 	
 }
 
@@ -453,8 +413,7 @@ max-width: 620px;
 		flex-direction: column;
     position: relative;
   
-	min-width:620px;
-  }
+	}
 	
 	#cell4 {
 		
@@ -492,7 +451,6 @@ max-width: 620px;
 #cell3 {
     flex-direction: column;
     position: relative;
-	flex-basis: auto;
     
   }
 	
