--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -103,9 +103,6 @@ div p {
 	flex-grow: 1;
 	justify-content: center;
 	
-	border: 1px solid green;
-  
-	
 	
 }
 
@@ -147,6 +144,8 @@ div p {
 
 
 .abilities{
+	margin-left:0 auto;
+    position:relative;
   text-align: center;
   color: #922610;
 }
@@ -174,6 +173,9 @@ div p {
 }
 
 .ability {
+	
+	margin-left:0 auto;
+    position:relative;
 	
 	display: block;
 }
