--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -37,7 +37,7 @@ div p {
 .divider{
 	
 	display: inline-block;
-  background-color:#4000C8;
+  background-color:greenyellow;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 	border: 0;
