--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -91,7 +91,7 @@ div p {
 	vertical-align: top;
 	padding: 0px 0px 10px 0px;
 	box-shadow: 0 1.5px 1.5em #867453;
-	background-image: url("../../images/bg-testt2.png");
+	background-image: url("../../images/bg-testt.png");
 	
 }
 
@@ -132,7 +132,7 @@ div p {
 
 .npc-heading h1{
   font-family: 'Libre Baskerville', 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
-  color:aliceblue;
+  color:indigo;
   font-size: 23px;
   line-height: 1.8em;
   margin: 0 10px 0 0;
@@ -162,7 +162,7 @@ div p {
 	margin-left:0 auto;
     position:relative;
   text-align: center;
-  color:aliceblue;
+  color:indigo;
 }
 
 
@@ -196,7 +196,7 @@ div p {
   font-size: 14px;
   line-height: 1.2em;
   text-transform: uppercase;
-  color: #7A200D;
+  color:indigo;
 }
 .ability p{
 	
@@ -211,7 +211,7 @@ div p {
 	display: inline-block;
 	text-align: left;
 	width: 100%;
-	color: aliceblue;
+	color:indigo;
 	font-weight: normal;
 	
 }
@@ -222,12 +222,12 @@ div p {
 .property-line p{
   display: inline-block;
   margin: 0 0 0 10px;
-  color:aliceblue;
+  color:indigo;
   font-size: 13.5px;
   line-height: 1.2em;
 }
 .property-line h4{
-  color:aliceblue;
+  color:indigo;
 }
 .property-line{
   font-weight: normal;
@@ -254,7 +254,7 @@ div p {
 	text-align: left;
 	width: 100%;
 	font-weight: normal;
-	color: aliceblue;
+	color: indigo;
 	
 }
 
@@ -264,13 +264,13 @@ div p {
 .right-line p{
   display: inline-block;
   margin: 0 0 0 10px;
-  color: #922610;
+  
   font-size: 13.5px;
   line-height: 1.2em;
-	color: aliceblue
+	color: indigo;
 }
 .right-line h4{
-  color:aliceblue;
+  color:indigo;
 }
 .right-line{
   text-indent: -0.25em;
@@ -341,7 +341,7 @@ div p {
 
 .npc-heading h1{
   font-family: 'Libre Baskerville', 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
-  color:aliceblue;
+  color:indigo;
   font-size: 32px;
   line-height: 1.2em;
   margin: 10px 0 0 10px;
@@ -355,7 +355,7 @@ div p {
 
 .glow {
   font-size: 32px;
-  color:aliceblue;
+  color:indigo;
   text-align: left;
   animation: glow 1s ease-in-out infinite alternate;
 }
