--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -2,14 +2,80 @@
 /* CSS Document */
 
 body {
-	
+	margin: 0 !important;
+    padding: 0 !important;
   font-size: 13.5px;
   line-height: 1.2em;
   box-sizing: border-box;
   max-width: 100%;
   font-family: 'Noto Sans', 'Myriad Pro', Calibri, Helvetica,
     Arial, sans-serif;
+	text-align: left;
   
+}
+
+
+
+.banner.bottom {
+	background-color:aqua;
+	height: 2px;
+	width: 100%;
+}
+
+.banner {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: black;
+	height: 73px;
+	width: 100%;
+	
+	text-align: left;
+	vertical-align: middle;
+ }
+
+
+
+.logo {
+	text-align: left;
+	
+}
+
+.topnav {
+  	overflow:hidden;
+		display: block;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: black;
+	height: 73px;
+	width: 100%;
+	
+	text-align: left;
+	vertical-align: middle;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+ 
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: mediumaquamarine;
+  color: black;
+}
+
+.topnav a.active {
+  background-color:aliceblue;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
 }
 
 
@@ -37,9 +103,9 @@ div p {
 .divider{
 	
 	display: inline-block;
-  background-color:maroon;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+	  background-color:maroon;
+	  background-repeat: no-repeat;
+	  background-size: 100% 100%;
 	border: 0;
   height: 2px;
   padding: 0 0 0 0;
@@ -107,13 +173,52 @@ div p {
 	vertical-align: top;
 	padding: 0px 0px 10px 0px;
 	box-shadow: 0 1.5px 1.5em #867453;
-	background-image: url("../../images/bg-testt.png");
+	background-image: url("../../images/bg-testt3.png");
 	
 }
 
 
 
+.dropbtn {
+  background-color:aqua;
+  color: white;
+	vertical-align: middle;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+	max-height: 40px;
+	padding: 16px 0 16px 0;
+}
 
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
 
 
 
@@ -263,7 +368,6 @@ div p {
 
 
 
-
 .right-line{
 	
 	display: inline-block;
@@ -376,15 +480,7 @@ div p {
   animation: glow 1s ease-in-out infinite alternate;
 }
 
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #ggg, 0 0 20px #ggg, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-}
+
 
 .steel-border{
   display: flex;
@@ -403,7 +499,24 @@ div p {
 
 
 @media only screen and (min-width: 0) and (max-width: 720px) {
-  .container {
+  
+
+	.topnav a:not(:first-child) {
+		
+		display: none;
+	}
+
+	.topnav a.icon {
+    
+		float: right;
+    
+		display: block;
+  
+	} 
+
+	
+	
+	.container {
 	  flex-direction: column;
 	  position: relative;
 	
@@ -447,8 +560,33 @@ div p {
 }
 
 
-@media only screen and (min-width: 720px) and (max-width: 1080px) {
-  .container {
+@media only screen and (min-width: 600px) and (max-width: 1080px) {
+
+	.topnav.responsive {position: relative;}
+
+	.topnav.responsive .icon {
+    
+		position: absolute;
+    
+		right: 0;
+    
+		top: 0;
+  }
+
+	.topnav.responsive a {
+    
+		float: none;
+    
+		display: block;
+    
+		text-align: left;
+		
+  }
+
+	
+
+	
+	.container {
 
 	flex-direction: column;
     position: relative;
@@ -483,7 +621,35 @@ div p {
 
 
 @media only screen and (min-width: 1080px) and (max-width: 2160px) {
-  .container {
+ 
+	
+	.topnav.responsive {
+		
+		position: relative;
+	
+	}
+  
+	.topnav.responsive.icon {
+    
+		position: absolute;
+    
+		right: 0;
+    
+		top: 0;
+  }
+  
+	.topnav.responsive a {
+    
+		float: none;
+    
+		display: block;
+    
+		text-align: left;
+  }
+	
+	
+	
+	.container {
 	  flex-direction: column;
     position: relative;
 	  flex-wrap:nowrap;
