--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -24,62 +24,19 @@ body {
 
 .banner {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+margin-left: auto;
+margin-right: auto;
 	background-color: black;
 	height: 73px;
 	width: 100%;
 	
 	text-align: left;
-	vertical-align: middle;
  }
-
-
 
 .logo {
 	text-align: left;
 	
 }
-
-.topnav {
-  	overflow:hidden;
-		display: block;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: black;
-	height: 73px;
-	width: 100%;
-	
-	text-align: left;
-	vertical-align: middle;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
- 
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: mediumaquamarine;
-  color: black;
-}
-
-.topnav a.active {
-  background-color:aliceblue;
-  color: black;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-
-
 div {
 	flex-basis:auto;
 	flex-grow:1;
@@ -173,52 +130,13 @@ div p {
 	vertical-align: top;
 	padding: 0px 0px 10px 0px;
 	box-shadow: 0 1.5px 1.5em #867453;
-	background-image: url("../../images/bg-testt3.png");
+	background-image: url("../../images/bg-testt.png");
 	
 }
 
 
 
-.dropbtn {
-  background-color:aqua;
-  color: white;
-	vertical-align: middle;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-	max-height: 40px;
-	padding: 16px 0 16px 0;
-}
 
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown a:hover {background-color: #ddd;}
-
-.show {display: block;}
 
 
 
@@ -480,7 +398,15 @@ div p {
   animation: glow 1s ease-in-out infinite alternate;
 }
 
-
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #ggg, 0 0 20px #ggg, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
 
 .steel-border{
   display: flex;
@@ -499,24 +425,7 @@ div p {
 
 
 @media only screen and (min-width: 0) and (max-width: 720px) {
-  
-
-	.topnav a:not(:first-child) {
-		
-		display: none;
-	}
-
-	.topnav a.icon {
-    
-		float: right;
-    
-		display: block;
-  
-	} 
-
-	
-	
-	.container {
+  .container {
 	  flex-direction: column;
 	  position: relative;
 	
@@ -560,33 +469,8 @@ div p {
 }
 
 
-@media only screen and (min-width: 600px) and (max-width: 1080px) {
-
-	.topnav.responsive {position: relative;}
-
-	.topnav.responsive .icon {
-    
-		position: absolute;
-    
-		right: 0;
-    
-		top: 0;
-  }
-
-	.topnav.responsive a {
-    
-		float: none;
-    
-		display: block;
-    
-		text-align: left;
-		
-  }
-
-	
-
-	
-	.container {
+@media only screen and (min-width: 720px) and (max-width: 1080px) {
+  .container {
 
 	flex-direction: column;
     position: relative;
@@ -621,35 +505,7 @@ div p {
 
 
 @media only screen and (min-width: 1080px) and (max-width: 2160px) {
- 
-	
-	.topnav.responsive {
-		
-		position: relative;
-	
-	}
-  
-	.topnav.responsive.icon {
-    
-		position: absolute;
-    
-		right: 0;
-    
-		top: 0;
-  }
-  
-	.topnav.responsive a {
-    
-		float: none;
-    
-		display: block;
-    
-		text-align: left;
-  }
-	
-	
-	
-	.container {
+  .container {
 	  flex-direction: column;
     position: relative;
 	  flex-wrap:nowrap;
