--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -186,7 +186,8 @@ div p {
 
 
 .npc-heading h2{
-  font-weight: normal;
+  text-transform: capitalize;
+	font-weight: normal;
   font-style: italic;
   font-size: 16px;
   line-height: 1.2em;
