--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -66,7 +66,24 @@ div p {
 	border: 0;
   height: 2px;
   padding: 0 0 0 0;
-  margin: 25 0 25 0;
+  margin: 15 0 15 0;
+  box-sizing: initial;
+	width:95%;
+	
+			
+}
+
+
+.divider-ability{
+	
+	display: inline-block;
+	  background-color:maroon;
+	  background-repeat: no-repeat;
+	  background-size: 100% 100%;
+	border: 0;
+  height: 2px;
+  padding: 0 0 0 0;
+  margin: 2 0 0 0;
   box-sizing: initial;
 	width:95%;
 	
@@ -199,7 +216,7 @@ div p {
 
 
 .abilities{
-	margin-left:0 auto;
+	
     position:relative;
   text-align: center;
   color:indigo;
@@ -228,11 +245,11 @@ div p {
 	margin-left:0 auto;
     position:relative;
 	
-	display: block;
+	display: inline-block;
 }
 
 .ability h4{
-  margin: 12px 0 2px;
+  margin: 2px 0 2px;
   font-size: 14px;
   line-height: 1.2em;
   text-transform: uppercase;
@@ -240,7 +257,7 @@ div p {
 }
 .ability p{
 	
-  margin: 0 0 10px 0;
+  margin: 0 0 0px 0;
   line-height: 1.2em;
 }
 
