--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -64,14 +64,29 @@ div p {
 	  background-repeat: no-repeat;
 	  background-size: 100% 100%;
 	border: 0;
-  height: 2px;
+  height: 4px;
   padding: 0 0 0 0;
   margin: 15 0 15 0;
   box-sizing: initial;
 	width:95%;
 	
+    border: 1px solid #000;
+    position: relative;
+    z-index: 1;
 			
 }
+
+.tapered-rule{
+  display: block;
+  width: 100%;
+  height: 5px;
+  border: none;
+  color: #922610;
+  fill: #922610;
+  stroke: #922610;
+}
+
+
 
 
 .divider-ability{
@@ -215,14 +230,6 @@ div p {
 }
 
 
-.abilities{
-	display: inline-block;
-    position:relative;
-  text-align: center;
-  color:indigo;
-}
-
-
 .abilities > span{
   display: inline-block;
 	text-align: center;
@@ -230,12 +237,13 @@ div p {
   width: 15.5%;
   min-width: 40px; 
   font-size: 16px;
-  
+  line-height: 1em;
 }
 
 .abilities p{
 	text-align: center;
-  margin: 0 0 0px 0;
+  margin: 0 0 10px 0;
+  line-height: 1.2em;
 }
 
 
@@ -244,11 +252,11 @@ div p {
 	margin-left:0 auto;
     position:relative;
 	
-	display: inline-block;
+	display: block;
 }
 
 .ability h4{
-  margin: 2px 0 2px;
+  margin: 12px 0 2px;
   font-size: 14px;
   line-height: 1.2em;
   text-transform: uppercase;
@@ -256,7 +264,7 @@ div p {
 }
 .ability p{
 	
-  margin: 0 0 0px 0;
+  margin: 0 0 10px 0;
   line-height: 1.2em;
 }
 
