--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -64,29 +64,17 @@ div p {
 	  background-repeat: no-repeat;
 	  background-size: 100% 100%;
 	border: 0;
-  height: 4px;
+  height: 3px;
   padding: 0 0 0 0;
-  margin: 15 0 15 0;
+  margin: 15 0 15 2;
   box-sizing: initial;
 	width:95%;
 	
-    border: 1px solid #000;
+   
     position: relative;
     z-index: 1;
 			
 }
-
-.tapered-rule{
-  display: block;
-  width: 100%;
-  height: 5px;
-  border: none;
-  color: #922610;
-  fill: #922610;
-  stroke: #922610;
-}
-
-
 
 
 .divider-ability{
@@ -168,8 +156,30 @@ div p {
 
 
 
+.tapered-rule{
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  border: none;
+  color: #922610;
+  fill: #922610;
+  stroke: #922610;
+}
 
+.path2 {
+  stroke-dasharray: 1120;
+/*   stroke-dashoffset: 800; */
+  animation: draw1 1s linear alternate;
+}
 
+@keyframes draw1 {
+  from {
+    stroke-dashoffset: 1120;
+  }
+  to {
+    stroke-dashoffset: 2240;
+  }
+}
 
 
 
@@ -194,7 +204,7 @@ div p {
 	min-width: 200px;
 	display: inline-block;
 	flex-grow: 1;
-	margin: 0 0 15px 10px;
+	margin: 0 25px 15px 10px;
 
 }
 
@@ -255,14 +265,14 @@ div p {
 	display: block;
 }
 
-.ability h4{
+.abilities h4{
   margin: 12px 0 2px;
   font-size: 14px;
   line-height: 1.2em;
   text-transform: uppercase;
   color:indigo;
 }
-.ability p{
+.abilities p{
 	
   margin: 0 0 10px 0;
   line-height: 1.2em;
@@ -273,6 +283,7 @@ div p {
 .property-line{
 	
 	display: inline-block;
+	flex-basis: 0;
 	text-align: left;
 	width: 80%;
 	color:indigo;
