--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -37,6 +37,8 @@ margin-right: auto;
 	text-align: left;
 	
 }
+
+
 div {
 	flex-basis:auto;
 	flex-grow:1;
@@ -329,10 +331,14 @@ div p {
 
 .property-line.bg{
   margin: 0 0 0 0;
-	text-indent: 30px
+  text-indent: 30px
 }
 
-
+bg-links {
+	
+	
+	color: crimson;
+}
 
 .right-line{
 	
