--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -331,12 +331,11 @@ div p {
 
 .property-line.bg{
   margin: 0 0 0 0;
-  text-indent: 30px
+  text-indent: 30px;
 }
 
 .bg-links {
-	
-	
+
 	color: crimson;
 }
 
