--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -406,8 +406,8 @@ div p {
 .stat-block.single{
 	display: inline-block;
   vertical-align: top;
-	width:inherit;
-  text-align: left;
+	width: 90%;
+  text-align: justify;
 	
 }
 .stat-block.wide .section-left,
