--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -336,10 +336,11 @@ div p {
 	display: inline-block;
 	vertical-align:top;
 	text-align: left;
-  margin:0 0 0 15px;
+  margin: 0 0 0 15px;
 	text-indent: 30px;
-  line-height: 1.4em;
+  line-height: 20px;
 	line-height: 200%;
+	width: 100%;
 }
 
 
