--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -107,7 +107,8 @@ div p {
 
 }
 .container2 {
-  margin: 0 auto;
+  margin: 0 0 20 0;
+	padding: 0 0 40px 0;
 	
 }
 
@@ -340,7 +341,7 @@ div p {
 	text-indent: 30px;
   line-height: 20px;
 	line-height: 200%;
-	width: 100%;
+	width: 90%;
 }
 
 
