--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -248,7 +248,7 @@ div {
 
 .abilities > span{
   display: inline-block;
-	text-align: left;
+	text-align: center;
   vertical-align: middle;
   width: 15.5%;
   min-width: 40px; 
@@ -257,7 +257,7 @@ div {
 }
 
 .abilities p{
-	text-align: left;
+	text-align: center;
   margin: 0 0 10px 0;
   line-height: 200%;
 	font-weight: bold;
@@ -293,8 +293,8 @@ div {
 
 .ability-item {
 	
-	text-align: left;
-	text-indent: 0px;
+	text-align: justify;
+	text-indent: -30px;
 	
 }
 
