--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -248,7 +248,7 @@ div {
 
 .abilities > span{
   display: inline-block;
-	text-align: center;
+	text-align: left;
   vertical-align: middle;
   width: 15.5%;
   min-width: 40px; 
@@ -257,7 +257,7 @@ div {
 }
 
 .abilities p{
-	text-align: center;
+	text-align: left;
   margin: 0 0 10px 0;
   line-height: 200%;
 	font-weight: bold;
@@ -268,10 +268,10 @@ div {
 
 .ability {
 	
-	margin-left:0 auto;
+	margin-left: 0 auto;
     position:relative;
 	
-	display: block;
+	display: inline-block;
 }
 
 .abilities h4{
@@ -293,8 +293,8 @@ div {
 
 .ability-item {
 	
-	text-align: justify;
-	text-indent: -30px;
+	text-align: left;
+	text-indent: 0px;
 	
 }
 
