--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -298,7 +298,12 @@ div {
 	
 }
 
-
+.ability-item p{
+	
+	text-align: left;
+	margin: 0px 0px 0px 0px;
+	text-indent: -30px;
+}
 
 
 .factions-item {
@@ -417,7 +422,7 @@ div {
 
 .property-line p {
 	
-	  text-indent: 30px;
+	  text-indent: -175px;
 
 }
 .property-line h4{
