--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -139,8 +139,7 @@ div {
 	flex-direction: column;
 	vertical-align: top;
 	padding: 0px 0px 10px;
-	box-shadow: 0 1.5px 1.5em #867453;
-	background-image: url("../../images/bg-testt.png");
+	background-image: url();
 	
 }
 
@@ -156,7 +155,6 @@ div {
 	flex-direction: column;
 	vertical-align: top;
 	padding: 0px 0px 10px;
-	box-shadow: 0 1.5px 1.5em #867453;
 	background-image: url("../../images/bg-testt.png");
 	
 }
