--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -132,8 +132,8 @@ div {
 	display: flex;
 	flex-grow: 1;
     flex-basis: 0;
-	max-width: 620px;
-	min-width: 200px;
+	max-width: 800px;
+	min-width: 600px;
 	flex-wrap: wrap;
 	
 	flex-direction: column;
@@ -653,6 +653,7 @@ div {
 	.container2 {
 		
 		flex-direction: column;
+		position:relative;
 	}
 	
 	#cell1{
@@ -766,8 +767,8 @@ div {
     
     position: relative;
      
-    align-content:flex-start;
-	  align-items: flex-start;
+    align-content: flex-start;
+	align-items: flex-start;
   }
   
 	#cell2 {
