--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -96,9 +96,12 @@ div {
 
 
 .container {
-  margin: 0 auto;
+    margin: 0 auto;
+	padding: 0px 0px 60px 0px;
 
 }
+
+
 .container2 {
   margin: 0 0 20 0;
 	padding: 0 0 40px 0;
@@ -753,6 +756,8 @@ div {
 	  flex-direction: column;
     position: relative;
 	  flex-wrap:nowrap;
+	  align-content: center;
+	  justify-content: center;
   }
   
 	.container2 {
@@ -767,7 +772,7 @@ div {
     
     position: relative;
      
-    align-content: flex-start;
+    align-content: center;
 	align-items: flex-start;
   }
   
@@ -786,6 +791,17 @@ div {
 	}
 	
 }
+
+#cell5 {
+	
+	 flex-direction: row;
+    
+    position: relative;
+     
+    align-content: flex-start;
+	align-items: flex-start;
+  }
+
 
 #bgcell{
 		flex-direction: column;
